# glam_wide

./: Cargo.toml  README.md
src/: bool_wide.rs  lib.rs  quat.rs  rot2.rs  vec2.rs  vec3.rs
src/bvec/: bvec2.rs  bvec3.rs  bvec4.rs  mod.rs
src/ivec/: ivec2.rs  mod.rs
src/mat/: mat2.rs  mat23.rs  mat2_wide.rs  mat3.rs  mat32.rs  mat3_ext.rs  mat3_wide.rs  mat_ext.rs  mod.rs  symmetric_mat2.rs  symmetric_mat3.rs  symmetric_mat6.rs
src/quat/: mod.rs  quat.rs  quat_wide.rs
src/rot2/: drot2.rs  drot2_scalar.rs  mod.rs  rot2.rs  rot2_wide.rs
src/swizzles/: mod.rs  vec2_impl.rs  vec3_impl.rs  vec4_impl.rs
src/vec/: mod.rs  vec2.rs  vec2_wide.rs  vec3.rs  vec3_wide.rs  vec4.rs
