[package]
name = "bevy_math_extensions"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Joona Aalto <jondolf.dev@gmail.com>"]
description = "Extensions to Bevy's math library."
documentation = "https://docs.rs/bevy_math_extensions"
repository = "https://github.com/Jondolf/bevy_math_extensions"
readme = "README.md"
keywords = ["gamedev", "math", "simd", "matrix", "vector"]
categories = ["game-development", "science", "simulation"]

[features]
default = ["f64"]

f64 = []
bevy_reflect = ["dep:bevy_reflect"]
serialize = ["dep:serde", "bevy_math/serialize", "wide/serde"]
approx = ["dep:approx", "bevy_math/approx"]

[dependencies]
bevy_math = "0.16"
bevy_reflect = { version = "0.16", optional = true }
serde = { version = "1.0", optional = true, features = ["serde_derive"] }
wide = "0.7"
approx = { version = "0.5", optional = true }

[dev-dependencies]
bevy_math_extensions = { path = "./", features = ["approx"] }
